hphp/test/zend/bad/zend/ns_051.php
<?php
namespace test\ns1;

function foo($x = INI_ALL) {
	var_dump($x);
}
foo();